--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -23,6 +23,7 @@ log = { version = "0.4.14", default-features = false }
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
 plonky2 = { version = "0.1.2", default-features = false }
 serde_json = "1.0.114"
+serde = { version = "1.0.197", features = ["derive"] }
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
